kubernetes/apps/default/doggy-frictions/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doggy-frictions
  namespace: default
  labels:
    app: doggy-frictions
spec:
  replicas: 2
  selector:
    matchLabels:
      app: doggy-frictions
  # wait 2 seconds after the ready status to decide if deployment has been updated or not
  minReadySeconds: 2
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        app: doggy-frictions
    spec:
      serviceAccountName: default
      containers:
        - name: app
          image: ghcr.io/starteleport/doggy-frictions:1.0.11-beta.gbfb6ff73ae # {"$imagepolicy": "flux-system:doggy-frictions"}
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 512Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            timeoutSeconds: 3
            httpGet:
              path: /
              port: http
          readinessProbe:
            timeoutSeconds: 3
            httpGet:
              path: /
              port: http
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
