kubernetes/apps/default/doggy-frictions/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: doggy-frictions
  namespace: default
spec:
  selector:
    app: doggy-frictions
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
