kubernetes/apps/default/doggy-frictions/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doggy-frictions
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/icon: video-input-antenna
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "doggy-frictions.${SECRET_DOMAIN}"
      secretName: doggy-frictions-tls
  rules:
    - host: *host
      http:
        paths:
        - backend:
            service:
              name: doggy-frictions
              port:
                name: http
          path: /
          pathType: Prefix
